--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Mathias Cianni",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
     "ejs": "^3.1.8",
